syntax = "proto3";

option go_package = "base/src/main/java/proto";

option java_multiple_files = true;

option java_package = "com.proto.user";

service UserService {
  rpc register(UserRequest) returns (UserResponse) {};
}

message UserRequest {
  int64 userId = 1;
  string username = 2;
  string password = 3;
}

message UserResponse {
  bool registered = 1;
}