syntax = "proto3";

option java_multiple_files = true;

option java_package = "com.proto.user";

message ErrorResponse {
  int64 user_id = 1;
  int64 expected_user_id =2;
  string username = 3;
}